@@ -85,6 +85,19 @@
   (:singular "\\(matr\\)ices$" "\\1ix")
   (:singular "\\(quiz\\)zes$" "\\1")
 
+  (:irregular "stratum" "strate")
+  (:irregular "syllabus" "syllabi")
+  (:irregular "radius" "radii")
+  (:irregular "addendum" "addenda")
+  (:irregular "cactus" "cacti")
+  (:irregular "child" "children")
+  (:irregular "corpus" "corpora")
+  (:irregular "criterion" "criteria")
+  (:irregular "datum" "data")
+  (:irregular "genus" "genera")
+  (:irregular "man" "men")
+  (:irregular "medium" "media")
+  (:irregular "move" "moves")
   (:irregular "person" "people")
   (:irregular "man" "men")
   (:irregular "child" "children")
